remove form class selector

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Fantastic Creatures</h1>
 
     <!-- Form data collection method 1 -->
-    <form class="js-form-creature">
+    <form>
         <input name="name" type="text" placeholder="Name" />
         <input name="magicAbility" type="text" placeholder="Magical Abilities" />
         <input name="dangerLevel" type="number" placeholder="Danger Level" />
