adding comment to ensure that the students know that the second form field markup is for our second demo

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <button>Add Fantastic Creature</button>
     </form> -->
 
+    <!-- Form data collection method 2 -->
     <div>
         <input class="js-input-name" name="name" type="text" placeholder="Name" />
         <input class="js-input-magic" name="magicAbility" type="text" placeholder="Magical Abilities" />
