--- a/index.html
+++ b/index.html
@@ -12,50 +12,54 @@
 <body>
     <h1>Fantastic Creatures</h1>
 
-    <!-- Form data collection method 1 -->
-    <!-- <form class="js-form-creature">
-        <input name="name" type="text" placeholder="Name" />
-        <input name="magicAbility" type="text" placeholder="Magical Abilities" />
-        <input name="dangerLevel" type="number" placeholder="Danger Level" />
-        <input name="color" type="text" placeholder="Color" />
-        <button>Add Fantastic Creature</button>
-    </form> -->
+    <div class="container">
+        <!-- Form data collection method 1 -->
+        <!-- <form class="js-form-creature">
+            <input name="name" type="text" placeholder="Name" />
+            <input name="magicAbility" type="text" placeholder="Magical Abilities" />
+            <input name="dangerLevel" type="number" placeholder="Danger Level" />
+            <input name="color" type="text" placeholder="Color" />
+            <button>Add Fantastic Creature</button>
+        </form> -->
 
-    <!-- Form data collection method 2 -->
-    <div>
-        <input class="js-input-name" name="name" type="text" placeholder="Name" />
-        <input class="js-input-magic" name="magicAbility" type="text" placeholder="Magical Abilities" />
-        <input class="js-input-danger" name="dangerLevel" type="number" placeholder="Danger Level" />
-        <input class="js-input-color" name="color" type="text" placeholder="Color" />
-        <button class="js-btn-creature">Add Fantastic Creature</button>
+        <!-- Form data collection method 2 -->
+        <div>
+            <input class="js-input-name" name="name" type="text" placeholder="Name" />
+            <input class="js-input-magic" name="magicAbility" type="text" placeholder="Magical Abilities" />
+            <input class="js-input-danger" name="dangerLevel" type="number" placeholder="Danger Level" />
+            <input class="js-input-color" name="color" type="text" placeholder="Color" />
+            <button class="js-btn-creature">Add Fantastic Creature</button>
+        </div>
     </div>
 
-    <h2>Recorded Fantastic Creatures</h2>
-    <div class="js-demo"></div>
-    <!-- Make a Table for our Fantastic Creatures -->
-    <table cellspacing="0">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Magic Ability</th>
-                <th>Danger Level</th>
-                <th>Color</th>
-            </tr>
-        </thead>
-        <tbody class="js-table-data">
-            <tr>
-                <td> -- </td>
-                <td> -- </td>
-                <td> -- </td>
-                <td> -- </td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="4">Great Creatures of our making</td>
-            </tr>
-        </tfoot>
-    </table>
+    <div class="container">
+        <h2>Recorded Fantastic Creatures</h2>
+        <div class="js-demo"></div>
+        <!-- Make a Table for our Fantastic Creatures -->
+        <table cellspacing="0">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Magic Ability</th>
+                    <th>Danger Level</th>
+                    <th>Color</th>
+                </tr>
+            </thead>
+            <tbody class="js-table-data">
+                <tr>
+                    <td> -- </td>
+                    <td> -- </td>
+                    <td> -- </td>
+                    <td> -- </td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="4">Great Creatures of our making</td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
 
 </body>
 </html>
